<resources>
    <string name="app_name">capstone_final</string>
    <string name="initialize">기본순</string>
    <string name="software">SW</string>
    <string name="economic">경제/경영</string>
    <string name="music">음악</string>
    <string name="foreign">외국어</string>
    <string name="administration">행정</string>

    <string name="Humanities">인문</string>
    <string name="TheFineArts">미술</string>
    <string name="Law">법과</string>
    <string name="Management">경영</string>
    <string name="Music">음악</string>
    <string name="Public">공과</string>
    <string name="Information">정보</string>
    <string name="Agriculture">농과</string>
    <string name="PhysicalEducation">체육</string>
    <string name="Marine">수산</string>
    <string name="Art">예술</string>
    <string name="SocialScience">사회과학</string>
    <string name="NaturalScience">자연과학</string>
    <string name="LifeScience">생활과학</string>

    <string name="individual">개인</string>
    <string name="Group">그룹</string>

    <string name="Online">온라인</string>
    <string name="Offline">오프라인</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="science">과학</string>

    <string name="requset_permission">This sample needs camera permission</string>
    <string name="camera_error">This device doesn\'t suppory Camera2.API.</string>
    <string name="basic">기본</string>
    <string name="default_notification_channel_id">안모여</string>
    <string name="recommend">추천</string>
    <string name="all">전체</string>
</resources>