<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.Home.viewpager.MentorFragment"
    android:orientation="vertical">


   <HorizontalScrollView
       android:id="@+id/filterScrollView"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/tablayout"
       android:scrollbars="none">
      <com.google.android.material.chip.ChipGroup
          android:id="@+id/filterChipGroup"
          app:selectionRequired="true"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:chipSpacingHorizontal="4dp"
          app:chipSpacingVertical="6dp"
          app:singleLine="true"
          app:singleSelection="true"
          android:paddingHorizontal="12dp"
          app:checkedChip="@id/cchip0"
          tools:visibility="visible">
         <com.google.android.material.chip.Chip
             android:id="@+id/cchip0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/Widget.casptonefinal.chip"
             android:text="@string/recommend"/>
         <com.google.android.material.chip.Chip
             android:id="@+id/cchip1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/Widget.casptonefinal.chip"
             android:text="@string/Humanities"/>
         <com.google.android.material.chip.Chip
             android:id="@+id/cchip2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/Widget.casptonefinal.chip"
             android:text="@string/TheFineArts"/>
         <com.google.android.material.chip.Chip
             android:id="@+id/cchip3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/Widget.casptonefinal.chip"
             android:text="@string/Law"/>
         <com.google.android.material.chip.Chip
             android:id="@+id/cchip4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/Widget.casptonefinal.chip"
             android:text="@string/Management"/>
         <com.google.android.material.chip.Chip
             android:id="@+id/cchip5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/Widget.casptonefinal.chip"
             android:text="@string/Music"/>
         <com.google.android.material.chip.Chip
             android:id="@+id/cchip6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/Widget.casptonefinal.chip"
             android:text="@string/Public"/>
         <com.google.android.material.chip.Chip
             android:id="@+id/cchip7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/Widget.casptonefinal.chip"
             android:text="@string/Information"/>
         <com.google.android.material.chip.Chip
             android:id="@+id/cchip8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/Widget.casptonefinal.chip"
             android:text="@string/Agriculture"/>
         <com.google.android.material.chip.Chip
             android:id="@+id/cchip9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/Widget.casptonefinal.chip"
             android:text="@string/PhysicalEducation"/>
         <com.google.android.material.chip.Chip
             android:id="@+id/cchip10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/Widget.casptonefinal.chip"
             android:text="@string/Marine"/>
         <com.google.android.material.chip.Chip
             android:id="@+id/cchip11"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/Widget.casptonefinal.chip"
             android:text="@string/Art"/>
         <com.google.android.material.chip.Chip
             android:id="@+id/cchip12"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/Widget.casptonefinal.chip"
             android:text="@string/SocialScience"/>
         <com.google.android.material.chip.Chip
             android:id="@+id/cchip13"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/Widget.casptonefinal.chip"
             android:text="@string/NaturalScience"/>
         <com.google.android.material.chip.Chip
             android:id="@+id/cchip14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/Widget.casptonefinal.chip"
             android:text="@string/LifeScience"/>

      </com.google.android.material.chip.ChipGroup>
   </HorizontalScrollView>
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/MentorrecyclerView"
       android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>



</LinearLayout>